# business-inventory-web-app

./: .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 01349fc09f03_initial_migration.py  3971f08a5ce4_initial_migration.py  437b1f75262c_updated_asset_model.py  6f79fdb58a8a_added_brand_crud_model_and_schema.py  802919aaeb95_added_serial_number_to_asset.py  91267d301393_added_to_asset_table.py  99df1b453e92_added_index_and_new_attributes_to_model.py  a07dcae450f1_added_brand_crud_model_and_schema.py
app/: enums.py
app/crud/: __init__.py  base.py  crud_asset.py  crud_model.py
app/db/: base.py  base_class.py
app/models/: __init__.py  asset.py  model.py
app/schemas/: __init__.py  asset.py  model.py
app/service/: __init__.py  model_service.py
backend/: requirements.txt
backend/alembic/versions/: 3971f08a5ce4_initial_migration.py
backend/app/crud/: __init__.py  crud_asset.py  crud_model.py
backend/app/service/: __init__.py
crud_app/app/: database.py
crud_app/app/crud/: __init__.py  base.py  crud_model.py
crud_app/app/db/: base.py  base_class.py
crud_app/app/models/: __init__.py  asset.py
crud_app/app/schemas/: __init__.py  asset.py
crud_app/app/service/: model_service.py
test/service/: test_model_service.py
