[project]
name = "business-inventory-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "pre-commit>=4.0.1",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "sqlalchemy>=2.0.36",
]
