[project]
name = "business-inventory-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "sqlalchemy>=2.0.36",
    "types-colorama>=0.4.15.20240311",
    "types-pygments>=2.18.0.20240506",
    "types-pywin32>=308.0.0.20241029",
    "types-setuptools>=75.5.0.20241116",
    "types-ujson>=5.10.0.20240515",
]

[tool.mypy]
exclude = [
    "^tests/",
    "^alembic/",
]